fix: uses must be path

--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -91,7 +91,7 @@ jobs:
 
     - name: Check if release exists
       id: check
-      uses: insightsengineering/release-existence-action
+      uses: insightsengineering/release-existence-action@main
       with:
         release-tag: ${{ steps.vars.outputs.tag }}
 
