--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -249,7 +249,7 @@ jobs:
             echo "::group::Copy $1 to $dir/$3"
             mkdir -p "$dir"
             cp "$1" "$dir/$3"
-            (cd "$dir/$2" && sha256sum "$3" > "$3.sha256")
+            (cd "$dir" && sha256sum "$3" > "$3.sha256")
             echo "::endgroup::"
           }
 
