--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -64,7 +64,7 @@ jobs:
         fi
 
         # Convert the output to a JSON array
-        DEB_LINKS_JSON=$(echo "$DEB_LINKS" | jq -R -s -c 'split("\n") | map(select(length > 0) | {path: ., file: (split("/") | last)})')
+        DEB_LINKS_JSON=$(echo "$DEB_LINKS" | tr ' ' '\n' | jq -R -s -c 'split("\n") | map(select(length > 0) | {path: ., file: (split("/") | last)})')
 
         echo $DEB_LINKS_JSON
         # Set the output
